# JARVIS

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
configs/apps/: app_main.json
configs/core/: core_main.json  main.json
configs/managers/modules/: module_main.json
configs/managers/views/: atom_sim.json
docs/: AI_POLICY.md  Code_Navigation.md  SmoothDamp.md
docs/Humor/: 67.md
docs/Playbooks/Templates/: ADR.md
docs/Playbooks/Workbench/: ADR_Sub_Pub.md
docs/jarvis/modules/kinematics/: workspace.md
src/jarvis/: main.py
src/jarvis.egg-info/: PKG-INFO  SOURCES.txt
src/jarvis/app_core/: __init__.py  app.py  gui_elements.py  logger.py  main.py  view_manager.py  view_settings.json
src/jarvis/app_core/app_builds/: app_build.json
src/jarvis/app_core/threading/: __init__.py  thread.py
src/jarvis/app_core/view_manager/: build.json  view_manager.py
src/jarvis/app_core/views/: __init__.py
src/jarvis/core/: core_build.json  main.py  settings.json
src/jarvis/core/core_builds/: central_build.json
src/jarvis/core/databus/: __init__.py  async_databus.py  databus.py
src/jarvis/core/logger/: setup.py
src/jarvis/core/module_manager/: __init__.py  build.json  module.py  module_manager.py  view.py
src/jarvis/core/threaded/: threaded.py
src/jarvis/managers/: __init__.py  node_manager.py
src/jarvis/managers/module_manager/: build.json  module_manager.py
src/jarvis/modules/: __init__.py  module_manager.py
src/jarvis/modules/PCA9685/: PCA9685.py  __init__.py  node.py
src/jarvis/modules/atom_sim/: __init__.py  atom_sim.py
src/jarvis/modules/camera/: __init__.py  camera.py  camera_viewer.py  defaults.json  settings.json  view.py
src/jarvis/modules/data_handler/: data_handler.py
src/jarvis/modules/face_tracker/: __init__.py  face_tracker.py  settings.json  view.py
src/jarvis/modules/hand_tracker/: __init__.py  coordinate_base.json  defaults.json  hand_tracker.py  node.py  processor.py  settings.json  view  view.py
src/jarvis/modules/image_processing/: image_processing.py
src/jarvis/modules/image_processor/: functions.py
src/jarvis/modules/kinematics/: DOF3.py  DOF3_V2.py  base.py  kinematics_src.py  matricies.py  validators.py
src/jarvis/modules/module_manager/: __init__.py  build.json  module_manager.py
src/jarvis/modules/smooth_damp/: __init__.py  smooth_damp.py
src/jarvis/scripts/temp_hand/: simple_hand_tracker.py
src/jarvis/settings/: __init__.py  core.json  modules.json  settings.json  settings.py  views.json
src/jarvis/utils/data_services/: __init__.py
src/programs/: shapes.py
src/programs/Atom3D/: README.md  TODO.md  atom.py  main.py  manifest.json  opengl_apple.py  shaders.py  shapes.py
tests/: test_atom.py
(+49 files in other folders)
