[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.3"
description = "JARVIS Modular Control System"
authors = [{name = "Andy"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"

dependencies = [
    "opencv-python"
]
[project.optional-dependencies]
ui = [
    "PySide6"
]
open_gl = [
    "PyOpenGL",
    "glm"
]
ai_tracking = [
    "mediapipe",
    "opencv-python"
]
raspi = [
    "adafruit-circuitpython-servokit"
]
all = [
    "jarvis[ui,ai_tracking,raspi,platformdirs]"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
