[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.3"
description = "Morris Industries JARVIS"
authors = [{name = "Andrew Morris"}]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "jarvis-core",
    "jarvis-app",
    "jarvis-kinematics"
]
[project.optional-dependencies]
ui = [
    "PySide6"
]
open_gl = [
    "PyOpenGL",
    "glm"
]
ai_tracking = [
    "mediapipe",
    "opencv-python"
]
raspi = [
    "adafruit-circuitpython-servokit"
]
all = [
    "jarvis[ui,ai_tracking,raspi,platformdirs]"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
managed = true
package = false

[tool.uv.sources]
jarvis-core = { workspace = true }
jarvis-app = { workspace = true }
jarvis-kinematics = { workspace = true }
